# langchain-lab

./: .env_example  .gitignore  .gitmodules  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SEMANTIC_CHUNKING_IMPLEMENTATION.md  SEMANTIC_CHUNKING_V2_IMPROVEMENTS.md  SENTENCE_WINDOW_FIX.md  SENTENCE_WINDOW_GUIDE.md  pyproject.toml  test_integration.py  test_pdf_support.py  test_prompts.py
golden_dataset/bank_golden_dataset/: part-001.json  part-002.json  part-003.json  part-004.json
scripts/: chat.py  evaluate.py  test_retrieval.py
src/: __init__.py
src/adapters/: __init__.py  memory_retriever_adapter.py  sentence_window_retriever_adapter.py  vllm_client_adapter.py
src/rag/: __init__.py  graph.py  nodes.py  prompt_manager.py  prompts.yaml  state.py  utils.py
tests/: test_rag_smoke.py
